<resources>
    <string name="app_name">CheckTask</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="To_do_tasks">To Do Tasks</string>
    <string name="add_new_task">Add new task</string>
    <string name="your_task">your task</string>
    <string name="go">Go</string>
    <string name="todo">TODO</string>
    <string name="delete">delete</string>
    <string name="backbutton">Back Button</string>
    <string name="start_work">start work</string>
    <string name="_00_00">00:00</string>
    <string name="start_to_focus">Start to Focus</string>
    <string name="pause">Pause</string>
    <string name="continue_string">Continue</string>
    <string name="stop">Stop</string>
    <string name="task">Task</string>
    <string name="task_description">Task description</string>
    <string name="task_date">Task date</string>
    <string name="task_time">Task time</string>
</resources>