<?xml version="1.0" encoding="utf-8"?>

<Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16sp">


        <ImageButton
            android:id="@+id/bt_back_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@string/backbutton"
            android:src="@drawable/back_image" />

        <TextView
            android:id="@+id/txtview_showTask_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="26dp"
            android:layout_toEndOf="@id/bt_back_id"
            android:hint="@string/your_task"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:contentDescription="@string/delete"
            android:src="@drawable/delete_icon" />


        <ImageButton
            android:id="@+id/btn_start_work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="26dp"
            android:layout_toStartOf="@id/btn_delete"
            android:background="@null"
            android:contentDescription="@string/start_work"
            android:src="@drawable/start_work_icon" />


    </RelativeLayout>
</Toolbar>